--- a/coldwell-banker-api/package.json
+++ b/coldwell-banker-api/package.json
@@ -18,6 +18,7 @@
     "@types/pdfkit": "^0.17.3",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "docxtemplater": "^3.67.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
@@ -25,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "pdfkit": "^0.17.2",
+    "pizzip": "^3.2.0",
     "prisma": "^6.19.0"
   },
   "devDependencies": {
