fix: copiar templates DOCX en build para evitar error 500

--- a/coldwell-banker-api/package.json
+++ b/coldwell-banker-api/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "prisma generate && tsc",
+    "build": "prisma generate && tsc && copyfiles -u 1 src/templates/* dist",
     "start": "prisma db push --accept-data-loss && node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -36,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
+    "copyfiles": "^2.4.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
