--- a/coldwell-banker-web/package.json
+++ b/coldwell-banker-web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/pdfkit": "^0.17.3",
     "axios": "^1.13.2",
+    "lucide-react": "^0.561.0",
     "pdfkit": "^0.17.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
