--- a/coldwell-banker-api/package.json
+++ b/coldwell-banker-api/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "prisma generate && tsc && copyfiles -u 1 src/templates/* dist",
-    "start": "npm run migrate:deploy && node dist/server.js",
-    "migrate:deploy": "prisma migrate deploy",
+    "start": "npm run db:push && node dist/server.js",
+    "db:push": "prisma db push --accept-data-loss",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
